# AOC2024

./: Cargo.toml
ex1/: ex1.rs
ex10/: ex10.rs
ex11/: ex11.rs
ex12/: ex12.rs
ex2/: ex2.rs
ex24/: ex24.rs
ex3/: ex3.rs  input.txt
ex4/: ex4-2.rs  ex4.rs
ex5/: ex5.rs
ex6/: ex6.rs
ex7/: ex7.rs
ex8/: ex8.rs
ex9/: ex9.rs
